Add get_output and simplify plot_samplesim

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: SampleSim
+Package: samplesim
 Type: Package
 Title: Sample size effects in stable isotope mixing solutions
 Version: 1.0
@@ -7,7 +7,7 @@ Author: Nicolas Casajus, Nicolas Lecomte, Dorothee Ehrich
 Maintainer: Nicolas Casajus <nicolas.casajus@gmail.com>
 Description: This package allows the investigation of the effect of sample size on estimates and precision of stable isotope mixing solutions calculated with the package siar (written by Andrew Parnell). Samples sizes are modified assuming a normal distribution with a user defined mean and standard deviation. Samples of different sizes are created from this distribution, and mixing proportions are estimated for several replicates of each sample size using the function siarmcmcdirchletv4 (package siar) and default values for the MCMC. Authors thank Rolf Ims for his contribution.
 License: GPL (>= 2)
-Depends: siar
+Depends: siar, plyr, ggplot2
 Suggests: knitr,
     rmarkdown
 VignetteBuilder: knitr
