--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,3 @@
-export(formatsources, plotsamplesim, samplesim)
+export(format_sources, plot_samplesim, samplesim, get_output)
 
-import(siar)
+import(siar, plyr, ggplot2)
