--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: r
 sudo: required
 
-# r_github_packages:
-#   - jimhester/covr
-#
-# after_success:
-#   - Rscript -e 'covr::codecov()'
+r_packages:
+  - covr
+
+after_success:
+  - Rscript -e 'library(covr); codecov()'
