--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,5 @@
 export(format_sources, plot_samplesim, samplesim, get_output)
 
 import(siar, plyr, ggplot2)
+
+importFrom("stats", "median", "rnorm", "sd")
