--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,12 @@
 .Rapp.history
 
 # folders
-.DS_Store
 ./.DS_Store
 ./R/.DS_Store
 ./man/.DS_Store
 ./data/.DS_Store
 ./inst/.DS_Store
-./inst/doc/.DS_Store
+./inst/external/.DS_Store
+./vignettes/.DS_Store
+./vignettes/test_siar/.DS_Store
+./vignettes/test_mixsiar/.DS_Store
