--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,5 @@
-export(format_sources, plot_samplesim, samplesim, get_output)
+export(plot_isospace, plot_samplesim, samplesim, get_output)
 
-import(siar, plyr, ggplot2)
+import(siar, MixSIAR, ggplot2)
 
 importFrom("stats", "median", "rnorm", "sd")
