--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,48 @@
 Package: samplesim
 Type: Package
-Title: Sample size effects in stable isotope mixing solutions
-Version: 1.0
-Date: 2017-10-30
-Author: Nicolas Casajus, Nicolas Lecomte, Dorothee Ehrich
-Maintainer: Nicolas Casajus <nicolas.casajus@gmail.com>
-Description: This package allows the investigation of the effect of sample size on estimates and precision of stable isotope mixing solutions calculated with the package siar (written by Andrew Parnell et al.) or the package MixSIAR (written by Brian Stock et al.). Sample sizes are modified assuming a normal distribution with a user defined mean and standard deviation. Samples of different sizes are created from this distribution, and mixing proportions are estimated for several replicates of each sample size using the function siarmcmcdirchletv4 (package siar) or the function run_model (package MixSIAR). Authors thank Rolf Ims for his contribution.
-License: GPL-2
-Depends: siar, MixSIAR, ggplot2
-Suggests: knitr, rmarkdown
+Version: 0.1
+Title: Sample Size Effects in Stable Isotope Mixing Solutions
+Authors@R: c(
+    person(
+      given   = "Nicolas",
+      family  = "Casajus",
+      email   = "nicolas.casajus@fondationbiodiversite.fr",
+      role    = c("aut", "cre", "cph"),
+      comment = c(ORCID = "0000-0002-5537-5294")),
+    person(
+      given   = "Nicolas",
+      family  = "Lecomte",
+      email   = "nicolas.lecomte@umoncton.ca",
+      role    = "aut",
+      comment = c(ORCID = "0000-0002-8473-5375")),
+    person(
+      given   = "Dorothee",
+      family  = "Ehrich",
+      email   = "dorothee.ehrich@uit.no",
+      role    = "aut"))
+Description: Allows the investigation of the effect of sample size on estimates
+    and precision of stable isotope mixing solutions calculated with the 
+    package 'siar' (written by Andrew Parnell et al.) or the package 'MixSIAR' 
+    (written by Brian Stock et al.). Sample sizes are modified assuming a 
+    normal distribution with a user defined mean and standard deviation. 
+    Samples of different sizes are created from this distribution, and mixing 
+    proportions are estimated for several replicates of each sample size using 
+    the function siar::siarmcmcdirchletv4() or the function 
+    MixSIAR::run_model(). Authors thank Rolf Ims for his contribution.
+URL: https://github.com/ahasverus/samplesim
+BugReports: https://github.com/ahasverus/samplesim/issues
+License: GPL (>= 2)
+Encoding: UTF-8
+LazyData: true
+NeedsCompilation: no
+SystemRequirements: JAGS 4.x.y
+Imports: 
+  ggplot2,
+  MixSIAR,
+  siar
+Suggests: 
+    knitr,
+    rmarkdown
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.1.1
 VignetteBuilder: knitr
