--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,11 +35,14 @@ License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
 NeedsCompilation: no
-SystemRequirements: JAGS 4.x.y
+SystemRequirements: JAGS (>= 4.3)
 Imports: 
-  ggplot2,
-  MixSIAR,
-  siar
+    ggplot2,
+    grDevices,
+    MixSIAR,
+    siar,
+    stats,
+    utils
 Suggests: 
     knitr,
     rmarkdown
